<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="movies">Movies</string>
    <string name="tvshow">TV Shows</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_fav">fav</string>
</resources>